# FlightRL

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  reusable-checks.yml
configs/hardware/: manufacturer_placeholder.toml
configs/tasks/: hover.toml  reach.toml  sequence.toml
docs/: architecture.md
scripts/: benchmark_env.py  compare_rewards.py  eval.py  export_puffer4.py  export_render_preview.py  plot_trajectory.py  rollout_random.py  smoke_test.py  train.py  train_puffer4.py
src/flightrl/: __init__.py  binding_kwargs.py  config.py  env.py  factory.py  plotting.py  policy.py  puffer4_config.py  puffer4_export.py  puffer4_runtime.py  render_forces.py  renderer.py  rollout.py  train_cli.py  training.py
src/flightrl/native/: binding.c  binding_env.h  binding_helpers.h  binding_vec.h  native_actions.c  native_dynamics.c  native_env.c  native_env.h  native_logging.c  native_observation.c  native_reset.c  native_reward.c  native_rng.h  native_tasks.c  native_termination.c  native_types.h  native_wind.c
tests/: test_config.py  test_env.py  test_policy.py  test_puffer4_export.py  test_scripts.py
