[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "numpy",
]
build-backend = "setuptools.build_meta"

[project]
name = "flightrl"
version = "0.1.0"
description = "High-throughput planar drone RL simulator built with C and PufferLib Ocean-style bindings."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "gymnasium>=0.29",
  "matplotlib>=3.8",
  "pufferlib>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
